--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,5 @@ borgbackup_client_hooks: []
 borgbackup_client_server_hostname: backup
 borgbackup_client_cronjob_minute: "{{ range(0, 59) | random }}"
 borgbackup_client_cronjob_hour: "{{ range(0, 5) | random }}"
+# List of paths to exclude from the backup
+borgbackup_client_exclude_paths: []
